@@ -1,4 +1,6 @@
 DIST irssi-0.8.14.tar.bz2 944708 RMD160 9c1cd4738432e7b3461ab371b9dcaafa0cd00827 SHA1 7718afec2de99a85b7eee0b945f8424d7b1bc947 SHA256 63ea70eb1ce6fb3c995e984f919dcd18882e916478779dd899de9385ef8fdf28
+DIST irssi-0.8.15-rc1.tar.bz2 921150 RMD160 ae1f7b9b56e3a634e1952a62538120ba665ca5bc SHA1 dc5d576638c9389e977efc6a10a7b286718570b5 SHA256 4c300a988216738d6d410200640b7d56a169905452596a4355c23b9851d9c776
 EBUILD irssi-0.8.14.ebuild 1232 RMD160 34c384d24090055d3b1b89982297afb2a6335711 SHA1 fbab5f189d8060d52ac8204a44ecf209ef56aa6f SHA256 90f6c428a3c717ced1b46451c8b1237e119b59b242af9fd439e098e8683c0d83
-MISC ChangeLog 21187 RMD160 616a50db60c6488aa0da47568eb435b0779bfd26 SHA1 ffcd6b3842e0db0c398182278dde7b6eae72ad5b SHA256 3cceb4c74d2dcd35238d5732f62e593e665f69c4aee771c45ae92933f7f0bad9
+EBUILD irssi-0.8.15_rc1.ebuild 1291 RMD160 5b8b75f3e24972285e533a7f7d4993dbaeaefbc3 SHA1 94b726a51b083d7b8e37e142cd84475548dbe95d SHA256 738cae533c5267f9f7411bb43143c00ffb411cd69d338a67ebfd16f1b8576798
+MISC ChangeLog 21313 RMD160 b9dac4b28e3e87952ff12ca167e9c60d07de309d SHA1 43c8fac401c78fe3e3fc1ba3a425fdf65e834d5d SHA256 93b62d0f662d7da9f319dc64e3f557e340d5d337638ef0960b17d3d3267b9e9d
 MISC metadata.xml 270 RMD160 217b6381a937b94caa61f5d1dcbcdf24fe2852f1 SHA1 1e8951324990f813bd348ce2b1c4fc75cb097250 SHA256 4962741e0eded229c8ac0cca6dc8fed203d9b63ed7d8de546c661e6661579c75
